# Offpunk History

## 2.0 - unreleased
TODO: better handling of folders with opnk
This is an an experimental and potentially unstable release. Bug reports are welcome.
- IMPORTANT: Licence has been changed to AGPL for ideological reasons
- IMPORTANT: Contact adress has been changed to offpunk2 on the same domain (because of spam)
- IMPORTANT: code has been splitted into 6 differents files. Installation/packaging should be adapted.
- New command-line tool: "netcache"
- New command-line tool: "ansicat"
- New command-line tool: "opnk"
- URL do not default anymore to "gemini://" if not protocol are indicated.
- Images of html files are now downloaded with the html (slower sync but better reading experience)
- Reading position is saved for the whole session
- Rendering is cached, allowing faster browsing
- Gopher-only: we don’t support naming a page after the name of the incoming link
- "--config-file" allows to start offpunk with custom config (#16)
- "accept_bad_ssl_certificates" now more agressive for http and really accepts them all
- Gemini-only: support for client generated certificates has been removed
- blocked domains with "redirect" now also blocks related subdomains.
- "file" is now marked as a dependency (thank Guillaume Loret)
- "--images-mode" allow to choose at startup which images should be dowloaded (none,readable,full)
- Support for multi-format rendering (such as RSS feeds with html elements)
- The cache is now automatically upgraded if needed (see .version in your cache)

## 1.10 - July 31st 2023
- IMPORTANT : new optional dependency : python-chardet
- IMPORTANT : Gopher directory index filename changed from "index.txt" to "gophermap". To update the cache to the new format run the `migrate-offpunk-cache` script (Sotiris Papatheodorou)
- "set accept_bad_ssl_certificates True" now also used for Gemini expired certificates
- Add missing chardet module (Sotiris Papatheodorou)
- Fix merging dictionaries with common keys (Sotiris Papatheodorou)